fixed varius gaps for screens wider than 768px

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -2,7 +2,7 @@
   /* colors and decorations */
   --accent-color: #ff0070;
   --main-background-color: #000028;
-  --main-text-color:  #F1B2CE;
+  --text-color:  #F1B2CE;
   --main-heading-color:#000028;
   --nav-color: #ff0070;
   --section-title-color: #ff0070;
@@ -21,14 +21,14 @@
 
 .theme_dark.title-decor {
   --accent-color: #ff0070;
-  --main-text-color:#000028;
+  --text-color:#000028;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --accent-color:#ff0070;
     --main-background-color:#000028;
-    --main-text-color: #f1b2ce;
+    --text-color: #f1b2ce;
     --main-heading-color:#000028;
     --nav-color: #ff0070;
     --section-title-color: #ff0070;
@@ -39,11 +39,11 @@
   .page {
     background-image: url(../images/cover-image-dark.png);
   }
-  
+
   .header__theme-menu-button_active {
-    outline: 1px solid var(--nav-color);  
+    outline: 1px solid var(--nav-color);
   }
-  
+
   .header__theme-menu-button:hover {
     --nav-hover-color: rgba(255, 0, 112, .4);
   }
