--- a/styles/light.css
+++ b/styles/light.css
@@ -2,7 +2,7 @@
   /* colors and decorations */
   --accent-color: #ff8dcb;
   --main-background-color: #fff1f7;
-  --main-text-color:  #353430;
+  --text-color:  #353430;
   --main-heading-color:#353430;
   --nav-color: #353430;
   --section-title-color: #353430;
@@ -21,11 +21,17 @@
   --nav-hover-color: rgba(50, 49, 45, .4);
 }
 
+@media (width <= 1024px) {
+  .theme_light .header__title {
+    --header-text-shadow: 4px 4px 0px #ff8dcb;
+  }
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     --accent-color: #ff8dcb;
     --main-background-color: #fff1f7;
-    --main-text-color:  #353430;
+    --text-color:  #353430;
     --main-heading-color:#353430;
     --nav-color: #353430;
     --section-title-color: #353430;
